# devthrottle

./: .gitignore  CLAUDE.md  Directory.Build.props  README.md  cc-director.sln  remote_experience.html
.github/workflows/: ci.yml  docs-drift.yml  release.yml
archived/CcDirector.VoskStt/: CcDirector.VoskStt.csproj  CustomDictionary.cs  VoskSttService.cs
docs/: CC_TOOLS.md  CODE_REVIEW_GUIDE.md  CcDirector.Engine-Design.md  CodingStyle.md  FleetMessaging.md  HowTerminalsWork.md  Iroh-Repository-Overview.md  PHILOSOPHY.md  README.md  Release-Process.md  SessionIntercommunication.html  SessionIntercommunication.md  SupportedAgentsTerminalModes.md  architecture-diagram.html  cli-reference.md  plan-github-actions-mac.md
docs/architecture/: CC_DIRECTOR_CAPABILITIES.md  DIRECTOR_DUMB_WRAPPER_TARGET.md  GATEWAY_CENTRALIZATION_PLAN.md  README.md  TARGET_IMPLEMENTATION_PLAN.md  VERSIONING.md  agent-plugin-implementation-plan.md  (+3 more)
local_builds/: _local_build.bat  _local_build1.bat  _local_build2.bat  _local_build3.bat  _local_build4.bat
mobile/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
phone/: CcDirectorClient.slnx  update-phone-client.ps1  update-phone.ps1
scripts/: agent-session-isolation.ps1  audit-python-bundle.py  build-all-tools.ps1  build-python-bundle.ps1  build-python-bundle.sh  build-tools.bat  capture-feature-screenshots.ps1  capture-window.ps1  check-inventory-drift.ps1  deploy-cockpit.ps1  deploy-phone.ps1  dictate-ws-probe.py  dictation-capture-health.py  drive-opencode-test.ps1  generate-large-repo-fixture.ps1  grant-service-control.ps1  install-cc-director-main.ps1  install-gateway-service.ps1  install-gateway-tray.ps1  install-tools.bat  linkedin-connect-from-queue.py  linkedin-post-from-queue.py  local-build-avalonia.ps1  local-build-mac.sh  mac-rebuild.sh  mac-setup.sh  new-release.ps1  package-mac-app.sh  redeploy-gateway.ps1  resize-brave.ps1  run-dev-signin.ps1  split-python-wheelhouse.py  tailscale-serve-cc-director.ps1  test-degradation.ps1  test-gateway-selfupdate.ps1  test-voice-turn.ps1  ui-drive.ps1  verify-gateway.ps1  voice-review-nightly.ps1
tools/: registry.json  test_shipped_tools_contract.py
tools/cc-ask/: build.ps1  cc-ask.spec  main.py  pyproject.toml
tools/cc-ask/src/: __init__.py  cli.py
tools/cc-comm-queue/: pyproject.toml
tools/cc-comm-queue/src/: cli.py  database.py  queue_manager.py  schema.py
tools/cc-comm-queue/tests/: test_cc_comm_queue.py
tools/cc-crawl4ai/: pyproject.toml
tools/cc-cron/: .gitignore  build.ps1  cc-cron.spec  main.py  pyproject.toml  requirements.txt
tools/cc-cron/src/: __init__.py  cli.py  gateway.py
tools/cc-cron/tests/: test_cli_notify.py  test_gateway.py
tools/cc-devthrottle/: main.py  pyproject.toml  requirements.txt
tools/cc-devthrottle/src/: __init__.py  cli.py  schedule_ops.py  session_ops.py  settings_ops.py  setup_ops.py
tools/cc-devthrottle/tests/: test_actions_cli.py  test_schedule_cli_notify.py  test_schedule_ops.py  test_settings_ops.py  test_setup_ops.py
tools/cc-excel/: pyproject.toml
tools/cc-facebook/: pyproject.toml
tools/cc-fleet-selftest/: build.ps1  cc-fleet-selftest.spec  main.py  pyproject.toml  requirements.txt
tools/cc-fleet-selftest/src/: __init__.py  cli.py
tools/cc-gmail/: extract_sent_contacts.py  pyproject.toml  requirements.txt
tools/cc-gmail/src/: auth.py  cli.py  gmail_api.py  imap_client.py  smtp_client.py
tools/cc-gmail/tests/: test_gmail_api.py  test_imap_client.py  test_smtp_client.py
tools/cc-hardware/: pyproject.toml
tools/cc-history/: main.py  pyproject.toml
tools/cc-history/src/: __init__.py  cli.py
tools/cc-html/: pyproject.toml
tools/cc-html/src/: cli.py  html_generator.py  md_converter.py
tools/cc-html/tests/: test_cli.py  test_html_generator.py  test_md_converter.py
tools/cc-image/: pyproject.toml
tools/cc-outlook/: pyproject.toml
tools/cc-outlook/src/: auth.py  cli.py  outlook_api.py
tools/cc-outlook/tests/: test_cli.py  test_outlook_fixes.py
tools/cc-pdf/: pyproject.toml
tools/cc-pdf/src/: cli.py  md_converter.py  pdf_converter.py
tools/cc-pdf/tests/: test_html_generator.py  test_pdf_converter.py
tools/cc-personresearch/: build.ps1  pyproject.toml
tools/cc-personresearch/src/: aggregator.py  cli.py  runner.py
tools/cc-personresearch/src/sources/: base.py  company_website.py  fec_donations.py  github_search.py  google_dorking.py  gravatar.py  linkedin.py  nuwber.py  opencorporates.py  sec_edgar.py  thatsthem.py  truepeoplesearch.py  wayback.py  whois_lookup.py  zabasearch.py
tools/cc-photos/: main.py  pyproject.toml
tools/cc-photos/src/: cli.py  database.py
tools/cc-playwright/: LINKEDIN_POSTING.md  README.md  main.py  pyproject.toml
tools/cc-playwright/src/: cli.py
tools/cc-playwright/tests/: test_cli.py
tools/cc-posthog/: pyproject.toml
tools/cc-powerpoint/: pyproject.toml
tools/cc-powerpoint/src/: parser.py
tools/cc-powerpoint/tests/: test_parser.py
tools/cc-reddit/: pyproject.toml
tools/cc-reddit/src/: cli.py
tools/cc-send/: build.ps1  cc-send.spec  main.py  pyproject.toml
tools/cc-send/src/: __init__.py  cli.py
tools/cc-sessions/: build.ps1  cc-sessions.spec  main.py  pyproject.toml
tools/cc-sessions/src/: __init__.py  cli.py
tools/cc-spawn/: build.ps1  cc-spawn.spec  main.py  pyproject.toml
tools/cc-spawn/src/: __init__.py  cli.py
tools/cc-spotify/: pyproject.toml
tools/cc-spotify/src/: cli.py
tools/cc-status/: main.py  pyproject.toml
tools/cc-status/src/: __init__.py  cli.py
tools/cc-transcribe/: cc-transcribe.spec  pyproject.toml
tools/cc-transcribe/src/: ffmpeg.py  screenshots.py  transcriber.py
tools/cc-transcribe/tests/: test_transcriber.py
tools/cc-twitter/: pyproject.toml
tools/cc-twitter/src/: cli.py
tools/cc-vault/: README.md  VAULT_FIX_PLAN.md  pyproject.toml
tools/cc-vault/src/: catalog.py  cli.py  config.py  db.py  fuzzy_search.py  vectors.py
tools/cc-vault/tests/: test_shipped_fixes.py
tools/cc-video/: cc-video.spec  pyproject.toml
tools/cc-video/src/: screenshots.py
(+2937 files in other folders)
