[project]
name = "cc-cron"
version = "1.0.0"
description = "Manage cron jobs on the DevThrottle Gateway from the command line"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "cc-shared",
]

[project.scripts]
cc-cron = "cc_cron.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_cron"]
package-dir = {"cc_cron" = "src"}
