[project]
name = "cc-devthrottle"
version = "1.2.0"
description = "Unified DevThrottle command-line surface"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "cc-shared",
]

[project.scripts]
cc-devthrottle = "cc_devthrottle.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cc_devthrottle"]
package-dir = {"cc_devthrottle" = "src"}
