[project]
name = "cc-hardware"
version = "1.0.0"
description = "System hardware information CLI"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
cc-hardware = "cc_hardware.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_hardware"]
package-dir = {"cc_hardware" = "src"}
