[project]
name = "cc-history"
version = "1.0.0"
description = "Read another cc-director session's recent conversation turns"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cc-shared",
]

[project.scripts]
cc-history = "cc_history.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cc_history"]
package-dir = {"cc_history" = "src"}
