[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-outlook"
version = "0.1.0"
description = "Outlook CLI: read, send, search emails and manage calendar from the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["outlook", "email", "cli", "microsoft", "graph", "api", "calendar"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "O365>=2.0.0",
    "cc-shared",
    "cc-storage",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-outlook = "cc_outlook.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_outlook"]
package-dir = {"cc_outlook" = "src"}
