[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-personresearch"
version = "0.1.0"
description = "Person research CLI via OSINT and browser automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-whois>=0.9.4",
]

[project.scripts]
cc-personresearch = "cc_personresearch.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_personresearch", "cc_personresearch.sources"]
package-dir = {"cc_personresearch" = "src"}
