[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-photos"
version = "0.1.0"
description = "Photo organization tool: scan, categorize, detect duplicates and screenshots, AI descriptions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["photos", "organization", "duplicates", "screenshots", "ai", "vision"]
dependencies = [
    "pillow>=10.0.0",
    "pillow-heif>=0.15.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "cc-vault",
    "cc-shared",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-photos = "cc_photos.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_photos"]
package-dir = {"cc_photos" = "src"}
