[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-playwright"
version = "0.1.0"
description = "Playwright-backed browser automation CLI - trusted-event sibling to cc-browser for React form fills, signin/OTP flows, and dropdown selection"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.10"
keywords = ["browser", "automation", "playwright", "react", "cdp", "trusted-events"]
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-playwright = "cc_playwright.cli:main"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_playwright"]
package-dir = {"cc_playwright" = "src"}
