[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-posthog"
version = "0.1.0"
description = "PostHog analytics CLI for querying page views, funnels, and events"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["posthog", "analytics", "cli"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cc-shared",
    "cc-storage",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
cc-posthog = "cc_posthog.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_posthog"]
package-dir = {"cc_posthog" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
