[project]
name = "cc-sessions"
version = "1.0.0"
description = "List every session running across the cc-director fleet"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cc-shared",
]

[project.scripts]
cc-sessions = "cc_sessions.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_sessions"]
package-dir = {"cc_sessions" = "src"}
