[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-spotify"
version = "0.1.0"
description = "Spotify CLI via browser automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "cc-storage",
]

[project.scripts]
cc-spotify = "cc_spotify.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_spotify"]
package-dir = {"cc_spotify" = "src"}
