[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-twitter"
version = "0.1.0"
description = "Twitter/X CLI: post, reply, like, retweet, and view timeline"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["twitter", "x", "cli", "tweepy", "api"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tweepy>=4.14.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-twitter = "cc_twitter.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_twitter"]
package-dir = {"cc_twitter" = "src"}
