[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-vault"
version = "0.1.0"
description = "Personal Vault CLI: manage contacts, tasks, goals, ideas, documents and more"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["vault", "personal", "cli", "tasks", "goals", "documents", "rag", "vector-search"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "jellyfish>=1.0.0",
    "rapidfuzz>=3.0.0",
    "cc-storage",
]

[project.optional-dependencies]
full = [
    "python-docx>=0.8.0",
    "pymupdf>=1.23.0",
    "python-pptx>=0.6.0",
    "openpyxl>=3.1.0",
]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-vault = "cc_vault.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_vault"]
package-dir = {"cc_vault" = "src"}
