[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-video"
version = "0.1.0"
description = "Video utilities: info, extract audio, screenshots"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["video", "ffmpeg", "screenshots", "audio", "extract"]
dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-video = "cc_video.cli:app"

[tool.setuptools]
# src/ installs as the unique import package so all tools share one venv.
packages = ["cc_video"]
package-dir = {"cc_video" = "src"}
